# inner-rhythm-visualizer

./: .gitignore  BUILD.md  README.md  index.html  package.json  vite.config.ts
src/: App.css  App.tsx  global.d.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/rhythms/: attention_wandering.rs  critical_phi.rs  mod.rs  multi_temporal.rs  prediction_tension.rs  semantic_vortex.rs
src/hooks/: useRhythm.ts
src/visualizers/: AttentionWanderingVisualizer.tsx  CriticalPhiVisualizer.tsx  MultiTemporalVisualizer.tsx  PredictionTensionVisualizer.tsx  SemanticVortexVisualizer.tsx
